<resources>
    <string name="app_name">Redi Express</string>
    <string name="quick_delivery_at_your_doorstep">Quick Delivery At Your Doorstep</string>
    <string name="enjoy_quick_pick_up_and_delivery_to_your_destination">Enjoy quick pick-up and delivery to your destination</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="flexible_payment">Flexible Payment</string>
    <string name="different_modes_of_payment_either_before_and_after_delivery_without_stress">Different modes of payment either before and after delivery without stress</string>
    <string name="real_time_tracking">Real-time Tracking</string>
    <string name="track_your_packages_items_from_the_comfort_of_your_home_till_final_destination">Track your packages/items from the comfort of your home till final destination</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="complete_the_sign_up_process_to_get_started">Complete the sign up process to get started</string>
    <string name="full_name">Full name</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="phone_number">Phone Number</string>
    <string name="_7_999_999_99_99">+7(999)999-99-99</string>
    <string name="email_address">Email Address</string>
    <string name="mail_com">***********@mail.com</string>
    <string name="password">Password</string>
    <string name="stars">**********</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_ticking_this_box_you_agree_to_our_terms_and_conditions_and_private_policy">By ticking this box, you agree to our Terms and conditions and private policy</string>
    <string name="or_sign_in_using">or sign in using</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="fill_in_your_email_and_password_to_continue">Fill in your email and password to continue</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="send_otp">Send OTP</string>
    <string name="remember_password_back_to">Remember password? Back to</string>
    <string name="hello_ken">Hello Ken</string>
    <string name="current_balance_n10_712_00">Current balance: N10,712:00</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_phone_no_address_email">Name, phone no, address, email ...</string>
    <string name="statements_reports"><![CDATA[Statements & Reports]]></string>
    <string name="download_transaction_details_orders_deliveries">Download transaction details, orders, deliveries</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="mute_unmute_set_location_tracking_setting"><![CDATA[mute, unmute, set location & tracking setting]]></string>
    <string name="card_bank_account_settings"><![CDATA[Card & Bank account settings]]></string>
    <string name="change_cards_delete_card_details">change cards, delete card details</string>
    <string name="referrals">Referrals</string>
    <string name="check_no_of_friends_and_earn">check no of friends and earn</string>
    <string name="about_us">About Us</string>
    <string name="know_more_about_us_terms_and_conditions">know more about us, terms and conditions</string>
    <string name="log_out">Log Out</string>
    <string name="send_a_package">Send a package</string>
    <string name="origin_details">Origin Details</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="top_up">Top Up</string>
    <string name="transaction_history">Transaction History</string>
    <string name="add_payment_method">Add Payment method</string>
    <string name="pay_with_wallet">Pay with wallet</string>
    <string name="complete_the_payment_using_your_e_wallet">complete the payment using your e wallet</string>
    <string name="credit_debit_card">Credit / debit card</string>
    <string name="complete_the_payment_using_your_debit_card">complete the payment using your debit card</string>
    <string name="proceed_to_pay">Proceed to pay</string>
</resources>