<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="275dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="196dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:text="@string/create_an_account"
            android:textColor="@color/TextColor1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="275dp"
            android:layout_height="20dp"
            android:text="@string/complete_the_sign_up_process_to_get_started"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="342dp"
        android:layout_height="438dp"
        android:layout_marginTop="33dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:layout_width="62dp"
            android:layout_height="16dp"
            android:text="@string/full_name"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_text_box"
            android:hint="@string/ivanov_ivan"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor1"
            android:textSize="14sp" />

        <TextView
            android:layout_width="94dp"
            android:layout_height="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/phone_number"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_text_box"
            android:hint="@string/_7_999_999_99_99"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor1"
            android:textSize="14sp" />

        <TextView
            android:layout_width="91dp"
            android:layout_height="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/email_address"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_text_box"
            android:hint="@string/mail_com"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor1"
            android:textSize="14sp" />

        <TextView
            android:layout_width="63dp"
            android:layout_height="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_text_box"
            android:hint="@string/stars"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor1"
            android:textSize="14sp" />

        <TextView
            android:layout_width="116dp"
            android:layout_height="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_password"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_text_box"
            android:hint="@string/stars"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor1"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_chek_box"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:gravity="center"
        android:text="@string/by_ticking_this_box_you_agree_to_our_terms_and_conditions_and_private_policy"
        android:textColor="@color/WarningColor"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <android.widget.Button
        android:id="@+id/button"
        android:layout_width="342dp"
        android:layout_height="46dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/sign_up_button2"
        android:text="@string/sign_up"
        android:onClick="onClickSignUp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="203dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:layout_width="160dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="#A7A7A7"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_SignIn"
            android:layout_width="43dp"
            android:layout_height="16dp"
            android:clickable="true"
            android:text="@string/sign_in"
            android:onClick="onClickSignIn"
            android:textColor="@color/PrimaryColor"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="95dp"
        android:layout_height="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/or_sign_in_using"
        android:textColor="@color/GrayColor2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/akar_icons_google_contained_fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>