<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="159dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="110dp"
        android:text="@string/welcome_back"
        android:textColor="@color/TextColor1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="267dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/fill_in_your_email_and_password_to_continue"
        android:textColor="@color/GrayColor2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="351dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:layout_width="91dp"
            android:layout_height="16dp"
            android:text="@string/email_address"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_text_box"
            android:hint="@string/mail_com"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor1"
            android:textSize="14sp" />

        <TextView
            android:layout_width="63dp"
            android:layout_height="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_text_box"
            android:hint="@string/stars"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor1"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="16dp"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" >

    <ImageView
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_chek_box2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:text="@string/remember_password"
            android:textColor="@color/GrayColor2"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="16dp"
            android:layout_marginStart="110dp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            android:textColor="@color/PrimaryColor"/>
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/button"
        android:layout_width="342dp"
        android:layout_height="46dp"
        android:layout_marginBottom="189dp"
        android:background="@drawable/sign_up_button2"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="203dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:layout_width="160dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="#A7A7A7"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_SignIn"
            android:layout_width="43dp"
            android:layout_height="16dp"
            android:clickable="true"
            android:text="@string/sign_in"
            android:textColor="@color/PrimaryColor"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="95dp"
        android:layout_height="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/or_sign_in_using"
        android:textColor="@color/GrayColor2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/akar_icons_google_contained_fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>