<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="183dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="110dp"
        android:text="@string/forgot_password2"
        android:textColor="@color/TextColor1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="156dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/enter_your_email_address"
        android:textColor="@color/GrayColor2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="342dp"
        android:layout_height="68dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <TextView
            android:layout_width="91dp"
            android:layout_height="16dp"
            android:text="@string/email_address"
            android:textColor="@color/GrayColor2"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_text_box"
            android:hint="@string/mail_com"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor1"
            android:textSize="14sp" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/button2"
        android:layout_width="342dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/sign_up_button2"
        android:text="@string/send_otp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" >
        
        <TextView
            android:layout_width="195dp"
            android:layout_height="16dp"
            android:text="@string/remember_password_back_to"
            android:textColor="@color/GrayColor2"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/sign_in"
            android:textSize="14sp"
            android:textColor="@color/PrimaryColor"
            android:clickable="true"/>

        
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>