<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OnBoarding3">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:src="@drawable/rafiki1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:fontFamily=""
        android:layout_width="297dp"
        android:layout_height="34dp"
        android:layout_marginTop="63dp"
        android:gravity="center"
        android:text="@string/real_time_tracking"
        android:textColor="@color/PrimaryColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/track_your_packages_items_from_the_comfort_of_your_home_till_final_destination"
        android:textColor="#3A3A3A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <android.widget.Button
        android:id="@+id/btn_SignUp"
        android:onClick="onClickSignUp"
        android:layout_width="342dp"
        android:layout_height="46dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/ic_btn_signup"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="203dp"
        android:layout_height="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_SignUp">
        
        <TextView
            android:layout_width="160dp"
            android:layout_height="16dp"
            android:text="@string/already_have_an_account"
            android:textColor="#A7A7A7"
            android:textSize="14sp"
            android:layout_gravity="center"/>
        
        <TextView
            android:id="@+id/tv_SignIn"
            android:layout_width="43dp"
            android:layout_height="16dp"
            android:text="@string/sign_in"
            android:textSize="14sp"
            android:textColor="@color/PrimaryColor"
            android:clickable="true"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>