<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Onboarding4">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:src="@drawable/rafiki"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="342dp"
        android:layout_height="236dp"
        android:layout_marginTop="59.07dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="297dp"
            android:layout_height="34dp"
            android:gravity="center"
            android:text="@string/flexible_payment"
            android:textColor="@color/PrimaryColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="271dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/different_modes_of_payment_either_before_and_after_delivery_without_stress"
            android:textColor="#3A3A3A"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <android.widget.Button
            android:id="@+id/btnSkip2"
            android:onClick="onClickSkip"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_btn_skip"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textColor="@color/PrimaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.widget.Button
            android:id="@+id/btnNext2"
            android:onClick="onClickNext"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_btn_next"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>